# bioscopeai-vision-streamer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main_bioscopeai_vision_streamer.yml
bioscopeai_vision_streamer/app/: main.py
bioscopeai_vision_streamer/app/api/: __init__.py  api.py  health.py
bioscopeai_vision_streamer/app/api/routers/ws/: __init__.py  ws.py
bioscopeai_vision_streamer/app/core/: __init__.py  config.py  logging_config.py
bioscopeai_vision_streamer/app/schemas/: signaling.py
bioscopeai_vision_streamer/app/webrtc/: __init__.py  rtc_manager.py  session.py  signaling.py  tracks.py
bioscopeai_vision_streamer/tests/: conftest.py  test-config.yaml  test_api.py  test_health.py
docs/: bioscopeai-vision-streamer-config-example.yaml
docs/supervisord/: bioscopeai-vision-streamer.conf
scripts/: run_tests.sh
